AMP-21121 Funding alignment issue for Transaction Date field

--- a/amp/TEMPLATE/ampTemplate/css_2/amp.css
+++ b/amp/TEMPLATE/ampTemplate/css_2/amp.css
@@ -12,6 +12,8 @@ h1 {text-transform:uppercase;}
 .l_sm {font-size:11px;}
 .l_mid_b {font-size:12px; font-weight:bold;}
 .t_sm{font-size:11px; line-height:14px;}
+.t_sm label {display: inline-block;vertical-align: top;margin: 0 0 0;}
+.t_sm input {display: inline-block;vertical-align: top;margin: 0 0 0;}
 .t_mid {font-size:12px;}
 .t_sm_1 {font-size:9px; line-height:14px;}
 .l_big_b {font-size:12px; font-weight:bold;padding:0px 0px 5px 0px;text-align:left;}
